# cybersecurity-data-vis

./: .gitignore  README.md
analysis/: pyproject.toml
analysis/data/: checksums.json
analysis/scripts/: acquire_all.py  build_artifacts.py
analysis/src/cyberviz/: artifacts.py  colors.py  paths.py
analysis/src/cyberviz/acquire/: _http.py  ait_ads.py  cisa_kev.py  ctu13.py  epss.py  nazario.py  registry.py  unsw_nb15.py  urlhaus.py
analysis/src/cyberviz/datasets/: ait_ads.py  cisa_kev.py  ctu13.py  epss.py  nazario.py  unsw_nb15.py  urlhaus.py
analysis/tests/: test_artifacts.py
app/: next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/about/: page.tsx
app/src/components/: InsightCard.tsx  SeverityLegend.tsx  VegaLite.tsx
app/src/lib/: artifacts.ts  tokens.ts
artifacts/v1/: manifest.json
artifacts/v1/series/: cluster.ait.incident_summary.json  cohort.ait.summary.json  montecarlo.epss.summary.json  pca.unsw.loadings.json  regression.unsw.feature_importance.json  text.cybatt.urgency.json  timeseries.ait.hourly.json
artifacts/v1/specs/: cluster.ait.scatter.vl.json  cohort.ait.deviation.vl.json  montecarlo.epss.patch_curves.vl.json  pca.unsw.scatter.vl.json  regression.unsw.importance.vl.json  text.cybatt.urgency.vl.json  timeseries.ait.hourly.vl.json
artifacts/v1/tables/: cluster.ait.incident_clusters.parquet  cohort.ait.host_days.parquet  montecarlo.epss.patch_curves.parquet  pca.unsw.scores.parquet  regression.unsw.scored.parquet
artifacts/v2/: manifest.json
(+57 files in other folders)
